force-app/main/default/objects/Vehicle_Model__c/Vehicle_Model__c.object-meta.xml
<CustomObject>
    <description>Electra EV catalog model - sedan, coupe, wagon, pickup, hatchback variants. Defines the product lineup available for customer selection and test drive scheduling.</description>
    <label>Vehicle Model</label>
    <nameField>
        <label>Model Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vehicle Models</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>