force-app/main/default/objects/Vehicle_Model__c/fields/Acceleration_0_100_Sec__c.field-meta.xml
<CustomField>
    <fullName>Acceleration_0_100_Sec__c</fullName>
    <description>Acceleration time from 0 to 100 km/h in seconds.</description>
    <label>0–100 (sec)</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>