force-app/main/default/objects/Vehicle_Model__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates whether this model is currently available for sale and test drives.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>