force-app/main/default/objects/Vehicle_Model__c/fields/Charging_Power_Kw__c.field-meta.xml
<CustomField>
    <fullName>Charging_Power_Kw__c</fullName>
    <description>Maximum DC fast charging power in kilowatts.</description>
    <label>Charging Power (kW)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>