force-app/main/default/objects/Vehicle_Model__c/fields/Charging_Time_Min__c.field-meta.xml
<CustomField>
    <fullName>Charging_Time_Min__c</fullName>
    <description>Time required to charge from 10% to 80% in minutes using specified charging power.</description>
    <label>Charging 10–80% (min)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>