force-app/main/default/objects/Vehicle_Model__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <description>Stable code for model identification, e.g. E_CRUISER, E_SPORT, E_WAGON. Used for consistent referencing across systems.</description>
    <externalId>true</externalId>
    <label>Model Code</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>