force-app/main/default/objects/Vehicle_Model__c/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <description>Marketing position and target customer segment for this model.</description>
    <label>Market Position</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>