force-app/main/default/objects/Vehicle_Model__c/fields/Price_ARS__c.field-meta.xml
<CustomField>
    <fullName>Price_ARS__c</fullName>
    <description>Base price in Argentine Pesos.</description>
    <label>Price (ARS)</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>