force-app/main/default/objects/Vehicle_Model__c/fields/Range_Km__c.field-meta.xml
<CustomField>
    <fullName>Range_Km__c</fullName>
    <description>WLTP certified range in kilometers on a full charge.</description>
    <label>Range (WLTP km)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>