force-app/main/default/objects/Vehicle_Model__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Vehicle body type classification.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sedan</fullName>
            </value>
            <value>
                <fullName>Coupé</fullName>
            </value>
            <value>
                <fullName>Wagon</fullName>
            </value>
            <value>
                <fullName>Pickup</fullName>
            </value>
            <value>
                <fullName>Hatchback</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>