force-app/main/default/objects/Vehicle_Model__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Code__c</columns>
    <columns>Type__c</columns>
    <columns>Range_Km__c</columns>
    <columns>Price_ARS__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Models</label>
</ListView>